# offroad_traversability

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/include/: config.h  frame_reader.h  inference.h  postprocessing.h  utils.h  zmq_pub.h
backend/src/: frame_reader.cpp  img2video.cpp  inference.cpp  main.cpp  postprocessing.cpp  zmq_pub.cpp
bridge/: bridge.py  requirements.txt
config/: offroad.yaml
cpp/: CMakeLists.txt  detector.cpp  img2video.cpp  segment.cpp
cpp/include/: inference.h  preprocessing.h  utils.h
cpp/src/: inference.cpp  main.cpp  preprocessing.cpp
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  LiveSession.jsx  PostSession.jsx  PreSession.jsx  components.jsx  constants.js  index.css
deploy/: build_deb.sh
deploy/deb/DEBIAN/: control  postinst  prerm
deploy/deb/etc/offroad/: offroad.yaml
deploy/deb/etc/systemd/system/: offroad-bridge.service  offroad-dashboard.service
offroad_pkg/DEBIAN/: control
python/scripts/: 2onnx.py
python/src/: model.py  test.py
scripts/: 2onnx.py
src/: dataset.py  train.py
training/scripts/: 2onnx.py  goose_utils.py
training/src/: dataset.py  test.py
training/src/config/: config.json
